# mexican_legal

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/evaluation/: golden_test_set.json
docs/: API.md  EVALUATION.md
scripts/: evaluate.py  ingest.py  load_test.py
src/api/: config.py  main.py  metrics_collector.py  middleware.py  models.py  request_logger.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  ragas_scorer.py  reporter.py
src/ingestion/: chunker.py  embedder.py  extractor.py  loader.py
src/legal_intelligence_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/monitoring/: dashboard.py
src/retrieval/: __init__.py  generator.py  pipeline.py  prompts.py  retriever.py
tests/api/: test_models.py
tests/evaluation/: test_metrics.py
tests/ingestion/: test_chunker.py
tests/retrieval/: test_pipeline.py
