[project]
name = "legal-intelligence-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "pinecone-client>=3.0",
    "anthropic>=0.30",
    "pdfplumber>=0.10",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
dev = ["ruff>=0.5", "mypy>=1.10"]